Fixed form CSS alignment

--- a/css/main.css
+++ b/css/main.css
@@ -2,16 +2,15 @@
     width: 100%;
     height: 100%;
     background: #fff;
-    padding-top: 80px;
 }
 
 #signIn form {
     width: 260px;
-    height: 170px;
+    height: 180px;
     position: absolute;
     top: 50%; left: 50%;
-    margin-top: -85px;
-    margin-left: -150px;
+    margin-top: -90px;
+    margin-left: -130px;
 }
 
 #signIn form small {
